fix dal, fix service, fix controller

--- a/Mystery.Example.DAL.Common/Mystery.Example.DAL.Common.csproj
+++ b/Mystery.Example.DAL.Common/Mystery.Example.DAL.Common.csproj
@@ -44,10 +44,11 @@
   <ItemGroup>
     <Compile Include="Interfaces\IGenericRepository.cs" />
     <Compile Include="Interfaces\IUnitOfWork.cs" />
-    <Compile Include="Interfaces\Repositories\ICustomerRepository.cs" />
+    <Compile Include="Interfaces\IUnitOfWorkFactory.cs" />
     <Compile Include="Models\Customer\CustomerDbModel.cs" />
     <Compile Include="Models\Product\ProductDbModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
