--- a/Mystery.Example.DAL/Mystery.Example.DAL.csproj
+++ b/Mystery.Example.DAL/Mystery.Example.DAL.csproj
@@ -51,17 +51,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Helpers\ScopeHelper.cs" />
     <Compile Include="Migrations\201902241002198_Initial.cs" />
     <Compile Include="Migrations\201902241002198_Initial.Designer.cs">
       <DependentUpon>201902241002198_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="ShopDbContext.cs" />
-    <Compile Include="NinjectModules.cs" />
+    <Compile Include="DataModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Interfaces\ICustomerService.cs" />
     <Compile Include="Repositories\GenericRepository\GenericRepository.cs" />
-    <Compile Include="Repositories\UnitOfWork\UnitOfWork.cs" />
+    <Compile Include="UnitOfWork.cs" />
+    <Compile Include="UnitOfWorkFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
